5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1674_1103.log
== TEST (2019-04-27 14:11:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a",", b)
elif( x < a a or x > b):
	print(x, "nao pertence ao intervalo",a ",", b)
elif(b <= a):
	print("Entradas",a "e",b, "invalidas")

-- ERROR:
File "XXXX", line 9
    print(x, "pertence ao intervalo", a",", b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:11:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a a or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a "e",b, "invalidas")

-- ERROR:
File "XXXX", line 10
    elif( x < a a or x > b):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:12:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a "e",b, "invalidas")

-- ERROR:
File "XXXX", line 13
    print("Entradas",a "e",b, "invalidas")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:12:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:12:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- EXECUTION TIME:
0.183619
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:12:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:12:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:13:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- EXECUTION TIME:
0.111876
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:13:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:17:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:17:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( x >= a and x <= b):
	print(x, "pertence ao intervalo", a,",", b)
elif( x < a  or x > b):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:18:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) and (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:18:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) and (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- EXECUTION TIME:
0.136873
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:18:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) and (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- EXECUTION TIME:
0.214447
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:18:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) and (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:19:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) or (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:19:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if(( x >= a) or (x <= b) and (b >a)):
	print(x, "pertence ao intervalo", a,",", b)
elif(( x < a)  or (x > b) and (b>a)):
	print(x, "nao pertence ao intervalo",a ,",", b)
elif(b <= a):
	print("Entradas",a ,"e",b, "invalidas")

-- EXECUTION TIME:
0.169599
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:23:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( b <= a):
	print("Entradas",a, "e",b,"invalidas")
	
elif(x >= a and x <= b):
	print(x, "pertence ao intervalo",a,",",b)
	
elif()
-- ERROR:
File "XXXX", line 14
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:24:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( b <= a):
	print("Entradas",a, "e",b,"invalidas")
	
elif(x >= a and x <= b):
	print(x, "pertence ao intervalo",a,",",b)
	
elif(x < a or x >b):
	print(x,"nao pertence ao intervalo",a,",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:25:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o numero x:"))
a = float(input("insira o numero a:"))
b = float(input("insira o numero b:"))

if( b <= a):
	print("Entradas",a, "e",b,"invalidas")
	
elif(x >= a and x <= b):
	print(x, "pertence ao intervalo",a,",",b)
	
elif(x < a or x >b):
	print(x,"nao pertence ao intervalo",a,",",b)
	
-- EXECUTION TIME:
0.168838
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
